--- a/bands.html
+++ b/bands.html
@@ -73,7 +73,9 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!-- js file link -->
-<script type="text/javascript" src="Javascript/app.js"></script>
+<script type="text/javascript" src="project1/band.js"></script>
+<script type="text/javascript" src="project1/placesApi.js"></script>
+
 
 </body>
 </html>
