--- a/bands.html
+++ b/bands.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <title>Project 1</title>
+
 </head>
 
 <body>
@@ -31,7 +32,7 @@
             </div>
 
             <div id="welcome" class="text-center">
-                <p>Welcome! We're here to help you see your favorite bands when they are on tour. Along with concerts see locations
+                <p>Welcome! We're here to help you see your favorite bands when they are on tour. Along with concerts, see locations
                     of nearby bars/pubs. Just enter a band/musician into our search engines to get started.
                     <hr>
             </div>
@@ -70,8 +71,11 @@
         </div>
 
         <div class="container" id="featured-div"> </div>
-
+        
     </div>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmd0Du1P5eZCZQTvzdqV9GDg5bpFeKxuE&libraries=places&callback=initMap"
+        async defer></script>
     <!-- jquery link-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -79,6 +83,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- js file link -->
+
     <script type="text/javascript" src="assets/js/bands.js"></script>
     <script type="text/javascript" src="assets/js/placesApi.js"></script>
 
