--- a/bands.html
+++ b/bands.html
@@ -73,8 +73,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <!-- js file link -->
-
-
+<script type="text/javascript" src="assets/js/bands.js"></script>
+<script type="text/javascript" src="assets/js/placesApi.js"></script>
 
 </body>
 </html>
