--- a/bands.html
+++ b/bands.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
 
@@ -10,71 +11,89 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <title>Project 1</title>
+
 </head>
 
 <body>
 
-<div class="wrapper">
+    <div class="wrapper">
 
-<!-- container div for search html elements -->
-<div class="container">
+        <!-- container div for search html elements -->
+        <div class="container">
 
-        <!-- div for header/title of page -->
-    <div class="text-center">
-        <!-- free logo -->
-        <img id="logo" src="assets/images/LogoMakr_2fCf5O.png" alt="logo">
+            <!-- div for header/title of page -->
+            <div class="center-align">
+                <!-- free logo -->
+                <img id="logo" src="assets/images/LogoMakr_2fCf5O.png" alt="logo">
 
-        <!-- <h1 class="text-center">Musichead Travel</h1> -->
+                <!-- <h1 class="text-center">Musichead Travel</h1> -->
 
-    </div>
+            </div>
 
-    <div id="welcome" class="text-center">
-        <p>Welcome! We're here to help you see your favorite bands when they are on tour. Along with concerts see locations of nearby bars/pubs. Just enter a band/musician into our search engines to get started.
-        <hr>
-    </div>
+            <div id="welcome" class="center-align">
+                <p>Welcome! We're here to help you see your favorite bands when they are on tour. Along with concerts, see locations
+                    of nearby bars/pubs. Just enter a band/musician into our search engines to get started.
+                    <hr>
+            </div>
 
-    <!-- form for artist/musician search field -->
-    <form>
-        <!-- input for search term/keywords -->
-        <div class="form-group">
-            <label class="instruction" for="searchBand"><span id="enter">Search Upcoming Tour Dates:</span></label>
-            <input type="text" class="form-control" id="searchBand" placeholder="Enter Musician/Band Name Here">
-        </div>
-        <div class="form-group">
+            <!-- form for artist/musician search field -->
+            <form>
+                <!-- input for search term/keywords -->
+                <div class="form-group">
+                    <label class="instruction" for="searchBand">
+                        <span id="enter">Search Upcoming Tour Dates:</span>
+                    </label>
+                    <div class="input-field">
+                        <input type="text" class="form-control" id="searchBand" placeholder=" Enter Musician/Band Name Here">
+                    </div>
+                </div>
+                <!-- <div class="form-group">
             <label class="instruction" for="searchLocation"><span id="enter">Search Location:</span></label>
-            <input type="text" class="form-control" id="searchBand" placeholder="Search">
+            <input type="text" class="form-control" id="searchLocation" placeholder="Search">
+        </div> -->
+            </form>
+
+            <!-- buttons -->
+            <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
+
+            <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
+
         </div>
-    </form>
 
-    <!-- buttons -->
-    <button type="button" class="btn btn-default" id="search-btn">Search</button>
+        <br>
+        <br>
 
-    <button type="button" class="btn btn-default" id="clear-btn">Clear Results</button>
+        <!-- div to push all search results html -->
+        <div class="container" id="results-div"></div>
 
-</div>
+        <div class="container">
+            <hr>
+            <h1 class="text-center" id="upcomingEventDiv">Upcoming Events</h1>
+        </div>
 
-<br><br>
+        <div class="container" id="featured-div"> </div>
 
-<!-- div to push all search results html -->
-<div class="container" id="results-div"></div>
+    </div>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmd0Du1P5eZCZQTvzdqV9GDg5bpFeKxuE&libraries=places" async
+        defer></script>
 
-<div class="container">
-    <hr>
-    <h1 class="text-center" id="recent-user-header">Upcoming Events</h1>
-</div>
+    <!-- &callback=initMap -->
+    <!-- jquery link-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<div class="container" id="featured-div"> </div>
+    <!-- boostrap js link -->
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
-</div>
-<!-- jquery link-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<!-- boostrap js link -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- js file link -->
+    <script type="text/javascript" src="assets/js/bands.js"></script>
+    <script type="text/javascript" src="assets/js/placesApi.js"></script>
+    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
 
 <!-- js file link -->
 <script type="text/javascript" src="assets/js/bands.js"></script>
 <script type="text/javascript" src="assets/js/placesApi.js"></script>
 
 </body>
+
 </html>
