minor styling and text change

--- a/bands.html
+++ b/bands.html
@@ -5,14 +5,7 @@
     <meta charset="utf-8">
 
     <!-- bootstrap link -->
-<<<<<<< HEAD
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
-=======
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous"> -->
-    <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css" media="screen,projection" />
-
->>>>>>> 5dbfc090a9b80b55c10645f3cde96bdcbc712256
 
     <!-- style.css link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -38,8 +31,8 @@
             </div>
 
             <div id="welcome" class="center-align">
-                <p>Welcome! We're here to help you see your favorite bands when they are on tour. Along with concerts, see locations
-                    of nearby bars/pubs. Just enter a band/musician into our search engines to get started.
+                <h3>Welcome!</h3> <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> <h5>We're also here to show you locations
+                    of the nearest liquor stores to the concert!</h5> <h5>Enter an artist's name into our search engine to get started!</h5>
                     <hr>
             </div>
 
@@ -59,21 +52,14 @@
             <input type="text" class="form-control" id="searchLocation" placeholder="Search">
         </div> -->
             </form>
-<<<<<<< HEAD
 
             <!-- buttons -->
+            <div class="buttonStyle">
+                <p>
             <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
-
+        </p>
             <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
-
-=======
-
-            <!-- buttons -->
-            <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
-
-            <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
-
->>>>>>> 5dbfc090a9b80b55c10645f3cde96bdcbc712256
+                </div>
         </div>
 
         <br>
@@ -117,12 +103,9 @@
     <script type="text/javascript" src="assets/js/placesApi.js"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
 
-<<<<<<< HEAD
 <!-- js file link -->
 <script type="text/javascript" src="assets/js/bands.js"></script>
 <script type="text/javascript" src="assets/js/placesApi.js"></script>
-=======
->>>>>>> 5dbfc090a9b80b55c10645f3cde96bdcbc712256
 
 </body>
 
