fixed double result bug

--- a/bands.html
+++ b/bands.html
@@ -31,9 +31,11 @@
             </div>
 
             <div id="welcome" class="center-align">
-                <h3>Welcome!</h3> <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> <h5>We're also here to show you locations
-                    of the nearest liquor stores to the concert!</h5> <h5>Enter an artist's name into our search engine to get started!</h5>
-                    <hr>
+                <h3>Welcome!</h3>
+                <h5>We're here to help you catch your favorite musicians when they are on tour.</h5>
+                <h5>We're also here to show you locations of the nearest liquor stores to the concert!</h5>
+                <h5>Enter an artist's name into our search engine to get started!</h5>
+                <hr>
             </div>
 
             <!-- form for artist/musician search field -->
@@ -55,11 +57,11 @@
 
             <!-- buttons -->
             <div class="buttonStyle">
-                <p>
-            <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
-        </p>
-            <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
+                <div>
+                    <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
                 </div>
+                <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
+            </div>
         </div>
 
         <br>
@@ -102,11 +104,6 @@
     <script type="text/javascript" src="assets/js/bands.js"></script>
     <script type="text/javascript" src="assets/js/placesApi.js"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
-
-<!-- js file link -->
-<script type="text/javascript" src="assets/js/bands.js"></script>
-<script type="text/javascript" src="assets/js/placesApi.js"></script>
-
 </body>
 
 </html>
