--- a/bands.html
+++ b/bands.html
@@ -10,7 +10,7 @@
     <!-- style.css link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <title>Project 1</title>
+    <title>Bands and Booze</title>
 
 </head>
 
@@ -32,7 +32,7 @@
 
             <div id="welcome" class="center-align">
                 <h3>Welcome!</h3> <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> <h5>We're also here to show you locations
-                    of the nearest liquor stores to the concert!</h5> <h5>Enter an artist's name into our search engine to get started!</h5>
+                    of the nearest bars to the concert!</h5> <h5>Enter an artist's name into our search engine to get started!</h5>
                     <hr>
             </div>
 
@@ -47,10 +47,7 @@
                         <input type="text" class="form-control" id="searchBand" placeholder=" Enter Musician/Band Name Here">
                     </div>
                 </div>
-                <!-- <div class="form-group">
-            <label class="instruction" for="searchLocation"><span id="enter">Search Location:</span></label>
-            <input type="text" class="form-control" id="searchLocation" placeholder="Search">
-        </div> -->
+
             </form>
 
             <!-- buttons -->
@@ -76,7 +73,8 @@
         <div class="container" id="featured-div"> </div>
 
     </div>
-    <!-- <div id="map"></div> -->
+   
+   
 
     <div id="modal1" class="modal">
         <div class="modal-content">
@@ -91,21 +89,17 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmd0Du1P5eZCZQTvzdqV9GDg5bpFeKxuE&libraries=places" async
         defer></script>
 
-    <!-- &callback=initMap -->
+    
     <!-- jquery link-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- boostrap js link -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-
+   
     <!-- js file link -->
     <script type="text/javascript" src="assets/js/bands.js"></script>
     <script type="text/javascript" src="assets/js/placesApi.js"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
 
-<!-- js file link -->
-<script type="text/javascript" src="assets/js/bands.js"></script>
-<script type="text/javascript" src="assets/js/placesApi.js"></script>
+
 
 </body>
 
