--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
     <div id="modal1" class="modal">
         <div class="modal-content">
             <div id="map"></div>
-            <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
-            </div>
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat center-align">Close</a> 
         </div>
 
     </div>
