corrected errors added note

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 
             <div id="welcome" class="center-align">
 
-                <h3>Welcome!</h3> <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> <h5>We're also here to show you locations
-                    of the nearest bars to the concert!</h5> <h5>Enter an artist's name into our search engine to get started!</h5>
+                <h3>Welcome!</h3> 
+                <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> 
+                <h5>We're also here to show you locations of the nearest bars to the concert!</h5> 
+                <h5>Enter an artist's name into our search engine to get started!</h5>
+                <p>PLEASE DRINK RESPONSIBLY</p>
                     <hr>
 
             </div>
@@ -53,9 +56,12 @@
             </form>
 
             <!-- buttons -->
+            <div class="buttonStyle">
+                <div>
             <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
-
+                </div>
             <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
+            </div>
 
         </div>
 
@@ -96,10 +102,6 @@
     <script type="text/javascript" src="assets/js/bands.js"></script>
     <script type="text/javascript" src="assets/js/placesApi.js"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
-
-<!-- js file link -->
-<script type="text/javascript" src="assets/js/bands.js"></script>
-<script type="text/javascript" src="assets/js/placesApi.js"></script>
 
 </body>
 
