link style font

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- style.css link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
     <title>Bands and Booze</title>
 
@@ -46,7 +47,7 @@
                 <!-- input for search term/keywords -->
                 <div class="form-group">
                     <label class="instruction" for="searchBand">
-                        <span id="enter">Search Upcoming Tour Dates:</span>
+                        <span id="enter"></span>
                     </label>
                     <div class="input-field">
                         <input type="text" class="form-control" id="searchBand" placeholder=" Enter Musician/Band Name Here">
