--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- style.css link -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
     <title>Bands and Booze</title>
 
@@ -32,8 +33,11 @@
 
             <div id="welcome" class="center-align">
 
-                <h3>Welcome!</h3> <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> <h5>We're also here to show you locations
-                    of the nearest bars to the concert!</h5> <h5>Enter an artist's name into our search engine to get started!</h5>
+                <h3>Welcome!</h3> 
+                <h5>We're here to help you catch your favorite musicians when they are on tour.</h5> 
+                <h5>We're also here to show you locations of the nearest bars to the concert!</h5> 
+                <h5>Enter an artist's name into our search engine to get started!</h5>
+                <p>PLEASE DRINK RESPONSIBLY</p>
                     <hr>
 
             </div>
@@ -43,7 +47,7 @@
                 <!-- input for search term/keywords -->
                 <div class="form-group">
                     <label class="instruction" for="searchBand">
-                        <span id="enter">Search Upcoming Tour Dates:</span>
+                        <span id="enter"></span>
                     </label>
                     <div class="input-field">
                         <input type="text" class="form-control" id="searchBand" placeholder=" Enter Musician/Band Name Here">
@@ -53,9 +57,12 @@
             </form>
 
             <!-- buttons -->
+            <div class="buttonStyle">
+                <div>
             <a class="waves-effect waves-light btn blue" id="search-btn">Search</a>
-
+                </div>
             <a class="waves-effect waves-light btn blue" id="clear-btn">Clear Results</a>
+            </div>
 
         </div>
 
@@ -97,9 +104,6 @@
     <script type="text/javascript" src="assets/js/placesApi.js"></script>
     <script type="text/javascript" src="assets/js/materialize.min.js"></script>
 
-<!-- js file link -->
-<script type="text/javascript" src="assets/js/bands.js"></script>
-<script type="text/javascript" src="assets/js/placesApi.js"></script>
 
 </body>
 
